# pq-nas

./: .gitattributes  .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README.md  SECURITY.md  build_tests.sh  install.sh  pqnas_qrauth_v4_test_vector_invalid.md  pqnas_qrauth_v4_test_vectors.md  pqnas_qrauth_v4_test_vectors_invalid_proof.md  pubspec.yaml  qr.sh  start.sh  test.sh  uninstall.sh  users_manual.md  verify_vectors.py
.dart_tool/: package_config.json  package_graph.json
apps/bundled/sharesmgr/: manifest.json
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake
config/: admin_settings.json  policy.json  policy.txt  shares.json  users.json
core/: qrauth_v4.c  qrauth_v4.cc  qrauth_v4.h
core/dna_pqcore/: README.md  dna_mlkem768_backend.cpp  dna_mlkem768_backend.h  dna_mlkem_native_config_768.h
core/dna_pqcore/internal/: dna_mlkem768_backend_diag.h  dna_mlkem768_provider.h  dna_mlkem768_provider_dna.cpp  dna_mlkem768_provider_native.cpp  (+3 more)
core/dna_pqcore_learn/: dna_mlkem_backend_oracle.cpp  dna_mlkem_backend_oracle.h  dna_mlkem_cbd.cpp  dna_mlkem_cbd.h  dna_mlkem_compress.cpp  dna_mlkem_compress.h  dna_mlkem_compress_du10.cpp  dna_mlkem_compress_du10.h  dna_mlkem_cpapke.cpp  dna_mlkem_cpapke.h  dna_mlkem_field.cpp  dna_mlkem_field.h  dna_mlkem_getnoise.cpp  dna_mlkem_getnoise.h  dna_mlkem_indcpa_decrypt_skeleton.cpp  dna_mlkem_indcpa_decrypt_skeleton.h  dna_mlkem_indcpa_encrypt_skeleton.cpp  dna_mlkem_indcpa_encrypt_skeleton.h  dna_mlkem_indcpa_keygen_skeleton.cpp  dna_mlkem_indcpa_keygen_skeleton.h  dna_mlkem_indcpa_packed.cpp  dna_mlkem_indcpa_packed.h  dna_mlkem_indcpa_roundtrip_skeleton.cpp  dna_mlkem_indcpa_roundtrip_skeleton.h  dna_mlkem_kem.cpp  dna_mlkem_kem.h  dna_mlkem_kem_random.cpp  dna_mlkem_kem_random.h  dna_mlkem_matrix_gen.cpp  dna_mlkem_matrix_gen.h  dna_mlkem_matvec.cpp  dna_mlkem_matvec.h  dna_mlkem_message.cpp  dna_mlkem_message.h  dna_mlkem_noisevec.cpp  dna_mlkem_noisevec.h  dna_mlkem_ntt.cpp  dna_mlkem_ntt.h  dna_mlkem_ntt_constants.cpp  dna_mlkem_ntt_constants.h  (+19 more)
docs/: ARCHITECTURE_V0.md  Android_7_TLS_Compatibility.md  FILE_MANAGER_LOADING_TROUBLESHOOTING.md  GARBAGE_MANAGEMENT.md  Mobile_app_authentication.md  QR_AUTH_V4_ENCODING.md  QR_AUTH_V4_PQNAS.md  apps.md  mlkem_learn_track_module_inventory_2026-04.md  qr-auth-v4-signing.md  qr-auth-v4.md  qr-auth-v5.md  storage_tiering.md
docs/archive/: ARCHITECTURE_V0_HISTORICAL.md
docs/auth/: v5_stateless.md
mlkem_lab/: CMakeLists.txt  README.md  usage.txt
mlkem_lab/docs/: dna_mlkem_architecture.md  mlkem_learn_track_checkpoint_2026-04.md  mlkem_learn_track_hardening_checklist_2026-04.md  mlkem_learn_track_review_worksheet_2026-04.md
server/: CMakeLists.txt.disabled  workspaces.cc
server/include/: allowlist.h  app_pairing.h  app_tokens.h  authz.h  policy.h  pqnas_util.h  routes_v5.h  session_cookie.h  verify_login_common.h  verify_v4_crypto.h
server/src/: activity_log.cpp  activity_log.h  allowlist.cc  app_pairing.cpp  app_tokens.cpp  audit_fields.h  audit_log.cc  audit_log.h  authz.cc  drive_health.cc  drive_health.h  drive_health_monitor.cc  drive_health_monitor.h  dropzone_index.cpp  dropzone_index.h  dropzone_routes.cpp  dropzone_routes.h  echo_stack_content_index.cpp  echo_stack_content_index.h  echo_stack_index.cpp  echo_stack_index.h  echo_stack_routes.cpp  echo_stack_routes.h  echo_stack_search_routes.cpp  echo_stack_search_routes.h  echo_stack_text_extract.cpp  echo_stack_text_extract.h  file_annotations.cpp  file_annotations.h  file_favorites.cc  file_favorites.h  file_location_index.cpp  file_location_index.h  file_locks.cpp  file_locks.h  file_versions.cpp  file_versions.h  file_versions_present.h  file_versions_read.cpp  file_versions_read.h  (+82 more)
tests/: record_v5_vector.sh  vectors.json
tests/cookies/: test_admin_cookie.cpp
tests/dna_pqcore/: test_dna_mlkem768_backend.cpp  test_dna_mlkem768_boundary.cpp  test_dna_mlkem768_compat.cpp  test_dna_mlkem768_dna_decaps_interop.cpp  test_dna_mlkem768_dna_encaps_interop.cpp  test_dna_mlkem768_dna_keygen_interop.cpp  test_dna_mlkem768_freeze_prefer_dna.cpp  test_dna_mlkem768_freeze_prefer_native.cpp  test_dna_mlkem768_provider_by_id.cpp  test_dna_mlkem768_provider_identity.cpp  test_dna_mlkem768_provider_matrix.cpp  test_dna_mlkem768_secret_lifecycle.cpp  test_dna_mlkem768_selected_provider_override.cpp
tests/dna_pqcore_learn/: test_mlkem_basemul_pair.cpp  test_mlkem_cbd.cpp  test_mlkem_cpapke.cpp  test_mlkem_field.cpp  test_mlkem_getnoise.cpp  test_mlkem_indcpa_decrypt_skeleton.cpp  test_mlkem_indcpa_encrypt_skeleton.cpp  test_mlkem_indcpa_keygen_skeleton.cpp  test_mlkem_indcpa_packed.cpp  test_mlkem_indcpa_roundtrip_skeleton.cpp  test_mlkem_kem.cpp  test_mlkem_kem_diff_fuzz.cpp  test_mlkem_kem_diff_many.cpp  test_mlkem_kem_random.cpp  test_mlkem_kem_vs_backend.cpp  test_mlkem_matrix_entry_ntt.cpp  test_mlkem_matrix_full_ntt.cpp  test_mlkem_matvec_full_ntt.cpp  test_mlkem_matvec_row_ntt.cpp  test_mlkem_message.cpp  test_mlkem_noisevec.cpp  test_mlkem_ntt_butterfly.cpp  test_mlkem_ntt_constants.cpp  test_mlkem_ntt_layer.cpp  test_mlkem_params_768.cpp  test_mlkem_poly_basemul_montgomery.cpp  test_mlkem_poly_basics.cpp  test_mlkem_poly_bytes.cpp  test_mlkem_poly_compress_du10.cpp  test_mlkem_poly_compress_dv4.cpp  test_mlkem_poly_invntt_tomont.cpp  test_mlkem_poly_mul_via_ntt.cpp  test_mlkem_poly_ntt_forward.cpp  test_mlkem_polyvec_basics.cpp  test_mlkem_polyvec_bytes.cpp  test_mlkem_polyvec_compress_du10.cpp  test_mlkem_prf.cpp  test_mlkem_sample_ntt.cpp  test_mlkem_tomont.cpp  test_mlkem_uniform_rej.cpp
tests/v4_vectors/: vectors.json
tests/v5_vectors/: v5_vectors.json  verify_v5_vectors.cpp
tests/vectors/: verify_vectors.py
tools/: build_all_bundled_zips.sh  check_admin_security_hardening.py  dev_reset_pqnas_state.sh  fs_regression.sh  generate_android_filetype_icons.py  generate_filetype_icon_map.py  generate_invalid_proof.py  keygen.c  test_admin_cookie.cpp  verify_v4_vectors.cpp  verify_vectors.c  verify_vectors.py
tools/installer/: pqnas_install.py
tools/release/: make_app_zips.sh  make_tarball.sh
(+175 files in other folders)
